fix: input prefix icon too large on mobile

--- a/src/components/universal/Input/index.module.css
+++ b/src/components/universal/Input/index.module.css
@@ -16,8 +16,8 @@
   }
 
   svg {
-    width: 100%;
-    height: 100%;
+    width: 1em;
+    height: 1em;
     margin: 0;
     padding: 0;
     vertical-align: unset;
